--- a/paper/sections/system_overview.tex
+++ b/paper/sections/system_overview.tex
@@ -1,4 +1,4 @@
-\section{System Overview}\label{sec:system-overview}
+\section{System Overview PART OF DESIGN}\label{sec:system-overview}
 \subsection{3D-Formatted Data}\label{subsec:3d-formatted-data}
 The term "3D-formatted data" is specific to this research, and must be explained to understand the choice of neural network architectures tested.
 This is best done by comparing it to "2D-formatted data".
@@ -34,10 +34,12 @@ Although tasks 1--3 were completed by other group members and are beyond the sco
 Due to the findings from these tasks, the final system uses 3 photodiodes and can recognize 8 different gestures, as illustrated in figure~\ref{fig:system}\@, while each gesture is composed of 100 readings from each photodiode.
 This is also relevant for task 4, as it means that whatever architecture is used must use a 2D array of size 3 by 100 as an input feature, and be able to distinguish between 8 output classes.
 
+ADD SUBSECTION FOR DATASET
+
 \begin{figure}[h]
     \centering
     \captionsetup{justification=centering}
     \includegraphics[width=\linewidth]{figures/system}
-    \caption{Visualization of the inputs \& outputs of the gesture recognition neural network.}
+    \caption{Visualization of the inputs \& outputs of the gesture recognition neural network. ADD MORE DETAIL}
     \label{fig:system}
 \end{figure}
