--- a/paper/sections/responsible_research.tex
+++ b/paper/sections/responsible_research.tex
@@ -2,3 +2,10 @@
 All code used for this research is open source can be found at https://github.com/matthewlipski/research\_project.
 Due to the inherent randomness present when training neural networks, the results presented in this paper may not be completely reproducible.
 However, using the same code and hardware, it should be possible for anyone to reach the same conclusions based on their own findings.
+The code being open source also allows others to find potential flaws in it, allowing it to be worked on and used for future research.
+
+The work conducted for this study was also heavily focused on experimentation rather than reviewing literature.
+Naturally, research into existing work was still required to provide a starting point for testing and find which neural network architectures would be most suitable for recognizing gestures, as well as find potential improvements to existing work.
+However, this emphasis on testing and experimentation rather than reading literature means that the testing methodology falls under the under most scrutiny, and that ensuring the results of this research are reproducible is paramount.
+This is why much of the paper is devoted to explaining the system and testing setup.
+Although it may seem overly detailed at times, it is crucial to go over the methodology in depth in order for the results presented in this study to be reproducible.
