--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -60,7 +60,8 @@ To ensure that the measured validation accuracy was representative across all ne
     However, the order of participants was not shuffled to ensure that gestures in the training data were recorded by different participants to gestures in the validation data, making validation more representative of a real-world scenario.
 \end{enumerate}
 
-\section{Accuracy Testing}\label{subsec:accuracy-testing-results}
+\subsubsection{Results}
+
 \subsubsection{RNN}
 
 \subsubsection{LSTM}
