--- a/paper/sections/background.tex
+++ b/paper/sections/background.tex
@@ -23,17 +23,16 @@ In addition to this, each neuron passes the combined input of all neurons in the
 
 Although ANNs are no longer considered state-of-the-art, understanding the purposes of neurons, neuron connections, layers, and activation functions remains useful, as these still form the building blocks of any neural network architecture.
 
-\subsection{Neural Networks on Embedded Hardware}\label{subsec:machine-learning-on-microcontrollers}
+\subsection{Neural Networks on Embedded Hardware}\label{subsec:neural-networks-on-embedded-hardware}
 Machine learning, and specifically neural networks, have traditionally been restricted to the realms of high-performance and in turn, high power devices~\cite{8342164}.
 Unfortunately, this means that it has been previously impractical to use these technologies with embedded hardware such as microcontrollers, as they lack the memory \& performance to run inference on neural networks locally, while using a remote processor for inference is not always feasible.
 
-However, recent advances into machine learning model compression and optimization have changed this, allowing deep neural networks with multiple hidden layers to be run on devices even powered by coin batteries.
-The most prominent development in this field has been TensorFlow Lite for Microcontrollers, which is a Python framework specifically made for optimizing and running neural networks on microcontrollers~\cite{MLSYS2021_d2ddea18}.
-This framework introduces two key methods of optimizing neural networks which makes it possible to deploy them on embedded hardware.
-The first of these is quantization, which allows converts all 32-bit floating point values and operations in a network to 8-bit integers.
-This includes neuron weights, activation functions, input data, and more, resulting in a tremendous improvement to the size of the neural network in memory as well as its runtime.
-The second optimization involves loading only the tensor operations that are needed for the neural network.
-For example, a neural network might not use any ReLU activation functions or 2D-convolution operations, so these are simply not loaded.
+Recent advances into machine learning model compression and optimization have changed this, allowing deep neural networks with multiple hidden layers to be run on devices even powered by coin batteries.
+The most prominent development in this field has been TensorFlow Lite, which is a multi-language framework used to optimize existing neural networks such that they can be ran on mobile devices~\cite{MLSYS2021_d2ddea18}.
+The key optimization introduced by TensorFlow Lite is quantization, which allows converts all point weights and activation functions in a network to 8-bit integers instead of 32-bit floating points, resulting in a tremendous improvement to the size of the neural network in memory as well as its runtime.
+
+However, mobile devices still have considerably more processing power and hardware capabilities than embedded devices, which is an issue that led to the development of TensorFlow Lite for Microcontrollers in 2018~\cite{MLSYS2021_d2ddea18}.
+TensorFlow Lite for Microcontrollers is a fork of TensorFlow Lite which further optimizes models such that they can be run on devices with extremely limited resources by using exclusively C/C++ and cutting down massively on dependencies.
 
 \subsection{Hand Gesture Data}\label{subsec:hand-gesture-data}
 In this research, neural networks are used to detect gestures, but to do this, data from some sensor(s) must be fed into the network.
